finally correct environment

--- a/prod.env
+++ b/prod.env
@@ -1,5 +1,1 @@
-DB_URI=postgres://db_user:db_password@db:5432/locations
-
-SECRET_KEY=12-30ijqoswkasf
-ALGORITHM=HS256
-EXPIRE_MINUTES=1231212
+DB_URI=postgres://db_user:db_password@db:5432/roiburo
